# stcmalloc

./: .gitmodules  CMakeLists.txt  README.md
include/stcmalloc/: config.h.in  stcmalloc.h
src/: CMakeLists.txt  stcmalloc.c
tests/: CMakeLists.txt
